consolidated various classes

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -32,7 +32,6 @@ h3 {
 .header h1 .seo {
     color: #d9dcd6;
 }
-
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -40,11 +39,9 @@ h3 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
 .header ul {
     list-style-type: none;
 }
-
 .header li {
     display: inline-block;
     margin-left: 25px;
@@ -95,52 +92,24 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-.search-engine-optimization img {
-        max-height: 200px;
-}
-
-.online-reputation-management {
+ .search-engine-optimization,
+ .online-reputation-management,
+ .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -149,20 +118,10 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
-    max-height: 200px;
+        max-height: 200px;
 }
 
 .footer {
