--- a/Assets/style.css
+++ b/Assets/style.css
@@ -45,6 +45,7 @@ h3 {
 .header li {
     display: inline-block;
     margin-left: 25px;
+    text-underline-position: above
 }
 
 a {
@@ -116,7 +117,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
     color: #ffffff;
-}
+    }
 
 .search-engine-optimization img,
 .online-reputation-management img,
