--- a/Assets/style.css
+++ b/Assets/style.css
@@ -28,7 +28,12 @@ h3 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    }
+.hover a:hover {
+    color: lightblue;
+    text-decoration: underline;
 }
+
 .header h1 .seo {
     color: #d9dcd6;
 }
@@ -44,8 +49,7 @@ h3 {
 }
 .header li {
     display: inline-block;
-    margin-left: 25px;
-    text-underline-position: above
+    margin-left: 25px; 
 }
 
 a {
